refactor(security): 优化用户认证流程与权限处理逻辑
- 删除 CustomUserDetails 中无用字段，统一权限字段命名为 authorities
- 优化 getAuthorities 方法，合并角色与权限处理逻辑，确保安全授权正确返回
- HeaderAuthenticationToken 构造时设置认证状态为 true，简化认证流程
- HeaderFilter 增加请求头多参数验签逻辑，替代原 Redis 缓存用户信息获取方式
- 使用 ObjectMapper 解析角色和权限列表，提升灵活性与健壮性
- HeaderFilter 添加参数非空校验、异常处理及日志打印，提升安全性和可维护性
- SecurityUtils 新增判断当前用户是否拥有指定角色的方法，简化权限校验调用
- MicroserviceSecurityConfig 调整 HeaderFilter 的依赖注入参数，适应新版实现逻辑